--- a/index.html
+++ b/index.html
@@ -20,18 +20,26 @@
     <link href="css/uonsite.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body id="page-top" class="index">
 
     <!-- Header -->
     <header>
+        <div class="container-fluid">
+            <div class="intro-text">
+                <div class="intro-lead-in">Coming soon...</div>
+                <div class="intro-heading">Uonsite.nl</div>
+            </div>
+        </div>
         <!-- <div class="container"></div> -->
         <ul class="rslides" id="slider">
-            <li><img src="img/img01.jpg" alt="#"></li>
-            <li><img src="img/img02.jpg" alt="#"></li>
-            <li><img src="img/img03.jpg" alt="#"></li>
-            <li><img src="img/img04.jpg" alt="#"></li>
+            <li><img src="img/img01.1.jpg" alt="#"></li>
+            <li><img src="img/img02.1.jpg" alt="#"></li>
+            <li><img src="img/img03.1.jpg" alt="#"></li>
+            <li><img src="img/img04.1.jpg" alt="#"></li>
         </ul>
     </header>
 
