--- a/index.html
+++ b/index.html
@@ -36,17 +36,6 @@
 
 </head>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-65358975-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
 <body>
 	<!-- Header -->
     <header class="header">
@@ -54,7 +43,7 @@
     		<div class="row">
 	        	<div class="col-md-12 titel">
 	        		<div class="titel2">
-	        			<h2 id="h2">Coming soon..</h2>
+	        			<h2 id="h2">Coming soon...</h2>
 	        		</div>
 	        		<div class="titel1">
 	        			<h1 id="h1">Uonsite</h1>
