--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <!-- Custom Fonts/Design -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -31,11 +30,20 @@
 </head>
 <body>
 	<div class="banner text-center">
-		<h1>Uonsite</h1>
-		<h2>This is my playground</h2>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h1>Uonsite</h1>
+					<h2>the playground of <a href="https://twitter.com/SilvestreVivo" target="_blank">@silvestrevivo</a></h2>
+					<ul>
+						<li><a href="https://github.com/silvestrevivo/" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+						<li><a href="https://nl.linkedin.com/in/silvestre-vivo-1a6843bb" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+						<li><a href="https://twitter.com/SilvestreVivo" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
-
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="assets/js/jQuery_v3.1.0.js"></script>
     <!-- Plugins JavaScript of Bootstrap and more -->
