New title effect
Query script for the title - Still adjust responsive

--- a/index.html
+++ b/index.html
@@ -33,9 +33,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h1>Uonsite</h1>
+					<!-- <h1>Uonsite</h1> -->
+					<h1><ul class="title">
+						<li>U</li>
+						<li>o</li>
+						<li>n</li>
+						<li>s</li>
+						<li>i</li>
+						<li>t</li>
+						<li>e</li>
+					</ul></h1>
 					<h2>the playground of <a href="https://twitter.com/SilvestreVivo" target="_blank">@silvestrevivo</a></h2>
-					<ul>
+					<ul class="subtitle">
 						<li><a href="https://github.com/silvestrevivo/" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
 						<li><a href="https://nl.linkedin.com/in/silvestre-vivo-1a6843bb" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
 						<li><a href="https://twitter.com/SilvestreVivo" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
